--- a/pom.xml
+++ b/pom.xml
@@ -1,148 +1,151 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" 
-		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
 							 http://maven.apache.org/maven-v4_0_0.xsd">
-  
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>tools.java.pats</groupId>
-  <artifactId>Formatters</artifactId>
-  <packaging>war</packaging>
-  <version>1.0</version>
-  <name>Formatters Maven Webapp</name>
-  <url>http://maven.apache.org</url>
-  
-  <dependencies>
-    <!-- Servlet API -->
-    <dependency>
-       <groupId>javax.servlet</groupId>
-       <artifactId>servlet-api</artifactId>
-       <version>${javax-servlet-version}</version>
-       <scope>provided</scope>
-    </dependency>
-	
-    <!-- Junit testing -->
-    <dependency>
-       <groupId>junit</groupId>
-       <artifactId>junit</artifactId>
-       <version>3.8.1</version>
-       <scope>test</scope>
-    </dependency>
-	
-    <!-- Spring testing -->
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-test</artifactId>
-      <version>${org.springframework.version}</version>
-      <scope>test</scope>
-      <exclusions>
-        <exclusion>
-          <groupId>commons-logging</groupId>
-          <artifactId>commons-logging</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-	
-    <!-- Logging setup -->
-    <dependency>
-       <groupId>org.slf4j</groupId>
-       <artifactId>slf4j-api</artifactId>
-       <version>${slf4j-version}</version>
-    </dependency>
-    <dependency>
-       <groupId>ch.qos.logback</groupId>
-       <artifactId>logback-classic</artifactId>
-       <version>${logback-version}</version>
-    </dependency>
-      <dependency>
-         <groupId>ch.qos.logback</groupId>
-         <artifactId>logback-core</artifactId>
-         <version>${logback-version}</version>
-      </dependency>
-	  
-    <!-- ThreadSafe annotations jar -->
-    <dependency>
-       <groupId>net.jcip</groupId>
-       <artifactId>jcip-annotations</artifactId>
-       <version>1.0</version>
-    </dependency>
-	
-    <!-- Spring setup -->
-    <dependency>
-       <groupId>org.springframework</groupId>
-       <artifactId>spring-core</artifactId>
-       <version>${org.springframework.version}</version>
-    </dependency>
-	
-    <!--
-         Bean Factory and JavaBeans utilities (depends on spring-core)
-         Define this if you use Spring Bean APIs (org.springframework.beans.*)
-     -->
-     <dependency>
-       <groupId>org.springframework</groupId>
-       <artifactId>spring-beans</artifactId>
-       <version>${org.springframework.version}</version>
-     </dependency>
-	 
-     <!--
-         Spring MVC for Servlet Environments (depends on spring-core, spring-beans, spring-context, spring-web)
-         Define this if you use Spring MVC with a Servlet Container such as Apache Tomcat (org.springframework.web.servlet.*)
-     -->
-     <dependency>
-       <groupId>org.springframework</groupId>
-       <artifactId>spring-webmvc</artifactId>
-       <version>${org.springframework.version}</version>
-     </dependency>
-  </dependencies>
-  
-  <build>
-     <finalName>Formatters</finalName>
-     <plugins>
-        <plugin>
-           <groupId>org.apache.maven.plugins</groupId>
-           <artifactId>maven-compiler-plugin</artifactId>
-           <version>2.3.2</version>
-           <inherited>true</inherited>
-           <configuration>
-              <source>${maven.compile.source}</source>
-              <target>${maven.compile.target}</target>
-           </configuration>
-        </plugin>
-        <plugin>
-           <groupId>org.codehaus.mojo</groupId>
-           <artifactId>tomcat-maven-plugin</artifactId>
-           <version>1.1</version>
-           <configuration>
-              <url>http://localhost/manager/text</url>
-              <server>Tomcat 7</server>
-              <path>/Formatters</path>
-           </configuration>
-        </plugin>
-     </plugins>
-  </build>
 
-  <pluginRepositories>
-     <pluginRepository>
-        <id>Codehaus Snapshots</id>
-        <url>http://snapshots.repository.codehaus.org/</url>
-        <snapshots>
-           <enabled>true</enabled>
-        </snapshots>
-        <releases>
-           <enabled>true</enabled>
-          <!-- Workaround for MNG-2974, see note below -->
-        </releases>
-     </pluginRepository>
-  </pluginRepositories>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>tools.java.pats</groupId>
+    <artifactId>Formatters</artifactId>
+    <packaging>war</packaging>
+    <version>1.0</version>
+    <name>Formatters Maven Webapp</name>
+    <url>http://maven.apache.org</url>
 
-  <properties>
-     <displaytag.version>1.1</displaytag.version>
-     <javax-servlet-version>2.4</javax-servlet-version>
-     <junit-version>4.8.2</junit-version>
-     <logback-version>1.0.1</logback-version>
-     <maven.compile.source>1.6</maven.compile.source>
-     <maven.compile.target>1.6</maven.compile.target>
-     <slf4j-version>1.6.4</slf4j-version>
-     <org.springframework.version>3.0.5.RELEASE</org.springframework.version>
-  </properties>
-    
+
+    <dependencies>
+        <!-- Servlet API -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>${javax-servlet-version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- Junit testing -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>3.8.1</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- Spring testing -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${org.springframework.version}</version>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>commons-logging</groupId>
+                    <artifactId>commons-logging</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <!-- Logging setup -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>${logback-version}</version>
+        </dependency>
+
+        <!-- ThreadSafe annotations jar -->
+        <dependency>
+            <groupId>net.jcip</groupId>
+            <artifactId>jcip-annotations</artifactId>
+            <version>1.0</version>
+        </dependency>
+
+        <!-- Spring setup -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>${org.springframework.version}</version>
+        </dependency>
+
+        <!--
+             Bean Factory and JavaBeans utilities (depends on spring-core)
+             Define this if you use Spring Bean APIs (org.springframework.beans.*)
+         -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+            <version>${org.springframework.version}</version>
+        </dependency>
+
+        <!--
+            Spring MVC for Servlet Environments (depends on spring-core, spring-beans, spring-context, spring-web)
+            Define this if you use Spring MVC with a Servlet Container such as Apache Tomcat (org.springframework.web.servlet.*)
+        -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${org.springframework.version}</version>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <finalName>Formatters</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <path>/${project.build.finalName}</path>
+                    <update>true</update>
+                    <url>http://localhost/manager/text</url>
+                    <username>maven</username>
+                    <password>deploy</password>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <inherited>true</inherited>
+                <configuration>
+                    <source>${maven.compile.source}</source>
+                    <target>${maven.compile.target}</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>Codehaus Snapshots</id>
+            <url>http://snapshots.repository.codehaus.org/</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+            <releases>
+                <enabled>true</enabled>
+                <!-- Workaround for MNG-2974, see note below -->
+            </releases>
+        </pluginRepository>
+    </pluginRepositories>
+
+    <properties>
+        <displaytag.version>1.1</displaytag.version>
+        <javax-servlet-version>2.4</javax-servlet-version>
+        <junit-version>4.8.2</junit-version>
+        <logback-version>1.0.1</logback-version>
+        <maven.compile.source>1.6</maven.compile.source>
+        <maven.compile.target>1.6</maven.compile.target>
+        <slf4j-version>1.6.4</slf4j-version>
+        <org.springframework.version>3.0.5.RELEASE</org.springframework.version>
+    </properties>
+
 </project>
