--- a/pom.xml
+++ b/pom.xml
@@ -45,18 +45,8 @@
 
         <!-- Logging setup -->
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>${slf4j-version}</version>
-        </dependency>
-        <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>${logback-version}</version>
-        </dependency>
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-core</artifactId>
             <version>${logback-version}</version>
         </dependency>
 
@@ -103,11 +93,12 @@
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.2</version>
                 <configuration>
-                    <path>/${project.build.finalName}</path>
+					<url>http://localhost/manager</url>  
+					<server>Tomcat 8.0</server>
+					<username>maven</username>  
+					<password>deploy</password>   				
+                    <path>/Formatters</path>
                     <update>true</update>
-                    <url>http://localhost/manager/text</url>
-                    <username>maven</username>
-                    <password>deploy</password>
                 </configuration>
             </plugin>
             <plugin>
@@ -144,7 +135,7 @@
         <logback-version>1.1.3</logback-version>
         <maven.compile.source>1.6</maven.compile.source>
         <maven.compile.target>1.6</maven.compile.target>
-        <slf4j-version>1.7.14</slf4j-version>
+        <!--<slf4j-version>1.7.14</slf4j-version>-->
         <org.springframework.version>3.0.5.RELEASE</org.springframework.version>
     </properties>
 
