--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>tools.java.pats</groupId>
     <artifactId>Formatters</artifactId>
-    <packaging>war</packaging>
+    <packaging>ear</packaging>
     <version>1.0</version>
     <name>Formatters Maven Webapp</name>
     <url>http://maven.apache.org</url>
@@ -19,6 +19,18 @@
             <artifactId>servlet-api</artifactId>
             <version>${javax-servlet-version}</version>
             <scope>provided</scope>
+        </dependency>
+
+        <!-- Commons File Upload and IO dependancies -->
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>${commons-fileupload-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons-io-version}</version>
         </dependency>
 
         <!-- Junit testing -->
@@ -129,6 +141,8 @@
     </pluginRepositories>
 
     <properties>
+        <commons-fileupload-version>1.3</commons-fileupload-version>
+        <commons-io-version>2.4</commons-io-version>
         <displaytag.version>1.1</displaytag.version>
         <javax-servlet-version>2.4</javax-servlet-version>
         <junit-version>4.8.2</junit-version>
