--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -21,6 +21,11 @@
     <url-pattern>/ReformatXml</url-pattern>
   </servlet-mapping>
 
+  <servlet-mapping>
+    <servlet-name>mvc-dispatcher</servlet-name>
+    <url-pattern>/ReformatSms</url-pattern>
+  </servlet-mapping>
+
   <context-param>
     <param-name>contextConfigLocation</param-name>
   	<param-value>/WEB-INF/mvc-dispatcher-servlet.xml</param-value>
