--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>tools.java.pats</groupId>
     <artifactId>Formatters</artifactId>
-    <packaging>ear</packaging>
+    <packaging>war</packaging>
     <version>1.0</version>
     <name>Formatters Maven Webapp</name>
     <url>http://maven.apache.org</url>
@@ -22,16 +22,16 @@
         </dependency>
 
         <!-- Commons File Upload and IO dependancies -->
-        <dependency>
-            <groupId>commons-fileupload</groupId>
-            <artifactId>commons-fileupload</artifactId>
-            <version>${commons-fileupload-version}</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>${commons-io-version}</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>commons-fileupload</groupId>-->
+            <!--<artifactId>commons-fileupload</artifactId>-->
+            <!--<version>${commons-fileupload-version}</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>commons-io</groupId>-->
+            <!--<artifactId>commons-io</artifactId>-->
+            <!--<version>${commons-io-version}</version>-->
+        <!--</dependency>-->
 
         <!-- Junit testing -->
         <dependency>
@@ -149,7 +149,6 @@
         <logback-version>1.1.3</logback-version>
         <maven.compile.source>1.6</maven.compile.source>
         <maven.compile.target>1.6</maven.compile.target>
-        <!--<slf4j-version>1.7.14</slf4j-version>-->
         <org.springframework.version>3.0.5.RELEASE</org.springframework.version>
     </properties>
 
