--- a/pom.xml
+++ b/pom.xml
@@ -137,7 +137,7 @@
         <logback-version>1.1.3</logback-version>
         <maven.compile.source>1.6</maven.compile.source>
         <maven.compile.target>1.6</maven.compile.target>
-        <org.springframework.version>4.3.15</org.springframework.version>
+        <org.springframework.version>5.1.1.RELEASE</org.springframework.version>
     </properties>
 
 </project>
