--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,14 @@
             <artifactId>spring-webmvc</artifactId>
             <version>${org.springframework.version}</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.webjars/jquery -->
+        <!--<dependency>-->
+            <!--<groupId>org.webjars</groupId>-->
+            <!--<artifactId>jquery</artifactId>-->
+            <!--<version>3.3.1</version>-->
+        <!--</dependency>-->
+
     </dependencies>
 
     <build>
@@ -137,7 +145,7 @@
         <logback-version>1.1.3</logback-version>
         <maven.compile.source>1.8</maven.compile.source>
         <maven.compile.target>1.8</maven.compile.target>
-        <org.springframework.version>4.3.1.RELEASE</org.springframework.version>
+        <org.springframework.version>4.1.5.RELEASE</org.springframework.version>
     </properties>
 
 </project>
