--- a/pom.xml
+++ b/pom.xml
@@ -101,10 +101,10 @@
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.2</version>
                 <configuration>
-					<url>http://localhost/manager</url>  
-					<server>Tomcat 8.0</server>
-					<username>maven</username>  
-					<password>deploy</password>   				
+					<url>http://localhost/manager/text</url>
+					<server>Tomcat 8.5</server>
+					<username>admin</username>
+					<password>deploy</password>
                     <path>/Formatters</path>
                     <update>true</update>
                 </configuration>
