--- a/pom.xml
+++ b/pom.xml
@@ -83,14 +83,6 @@
             <artifactId>spring-webmvc</artifactId>
             <version>${org.springframework.version}</version>
         </dependency>
-
-        <!-- https://mvnrepository.com/artifact/org.webjars/jquery -->
-        <!--<dependency>-->
-            <!--<groupId>org.webjars</groupId>-->
-            <!--<artifactId>jquery</artifactId>-->
-            <!--<version>3.3.1</version>-->
-        <!--</dependency>-->
-
     </dependencies>
 
     <build>
@@ -103,7 +95,7 @@
                 <configuration>
 					<url>http://localhost/manager/text</url>
 					<server>Tomcat 8.5</server>
-					<username>admin</username>
+					<username>Pats</username>
 					<password>deploy</password>
                     <path>/Formatters</path>
                     <update>true</update>
