--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,11 @@
                     <commitIdGenerationMode>full</commitIdGenerationMode>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>com.google.appengine</groupId>
+                <artifactId>appengine-maven-plugin</artifactId>
+                <version>1.9.80</version>
+            </plugin>
         </plugins>
     </build>
 
@@ -177,8 +182,8 @@
         <javax-servlet-version>2.4</javax-servlet-version>
         <junit-version>4.8.2</junit-version>
         <logback-version>1.1.3</logback-version>
-        <maven.compile.source>1.7</maven.compile.source>
-        <maven.compile.target>1.7</maven.compile.target>
+        <maven.compile.source>1.8</maven.compile.source>
+        <maven.compile.target>1.8</maven.compile.target>
         <org.springframework.version>4.3.18.RELEASE</org.springframework.version>
     </properties>
 
